--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,49 @@
-name: Deploy Vite site to GitHub Pages
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]  # ou "master", se for sua branch principal
+    branches: ['main'] # Mude para o nome da sua branch principal se for diferente
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: 'pages'
+  cancel-in-progress: false
+
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout código
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Instalar dependências
-        run: |
-          corepack enable
-          pnpm install
-
-      - name: Build do projeto
-        run: pnpm build
-
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18 # Use a versão do Node que seu projeto usa
+          cache: 'pnpm' # Mude para 'npm' ou 'yarn' se não usar pnpm
+      - name: Install dependencies
+        run: pnpm install # Mude para 'npm install' ou 'yarn install'
+      - name: Build
+        run: pnpm run build # Mude para 'npm run build' ou 'yarn build'
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy para GitHub Pages
+          # Upload a pasta 'dist' que o Vite gera
+          path: './dist'
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
