--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,22 +28,35 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      # --- ALTERAÇÃO APLICADA AQUI ---
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18 # Use a versão do Node que seu projeto usa
-          cache: 'pnpm' # Mude para 'npm' ou 'yarn' se não usar pnpm
+          node-version: '18.x' # Usar '18.x' é uma boa prática
+          cache: 'pnpm'
+      # --- FIM DA ALTERAÇÃO ---
+
       - name: Install dependencies
-        run: pnpm install # Mude para 'npm install' ou 'yarn install'
+        run: pnpm install
+        
       - name: Build
-        run: pnpm run build # Mude para 'npm run build' ou 'yarn build'
+        run: pnpm run build
+        
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload a pasta 'dist' que o Vite gera
           path: './dist'
+          
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
